[tool.poetry]
name = "pyweatherfetch"
version = "0.1.0"
description = "Fetch weather data for display via conky."
authors = ["Kevin Houlihan <kevin@crimsoncookie.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
urllib3 = "^1.26.13"
geopy = "^2.3.0"
tomlkit = "^0.11.6"

[tool.poetry.scripts]
weather = "pyweatherfetch:main"

[tool.pyright]
executionEnvironments = [
 { root = "pyweatherfetch" } 
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
